5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1721_3038.log
== TEST (2019-05-02 18:27:06) 
-- CODE:
x=float(input("digite o numero: "))
if(x<=-1 or x>=1):
-- ERROR:
File "XXXX", line 3
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:08) 
-- CODE:
x=float(input("digite o numero: "))
if(x<=-1 or x>=1):
-- ERROR:
File "XXXX", line 3
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:09) 
-- CODE:
x=float(input("digite o numero: "))
if(x<=-1 or x>=1):
-- ERROR:
File "XXXX", line 3
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:54) 
-- CODE:
x=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(x**(1/x))
elif(-1<x<0 or 0<x<1):
	print(%x)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%x)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:55) 
-- CODE:
x=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(x**(1/x))
elif(-1<x<0 or 0<x<1):
	print(%x)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%x)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:00) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:00) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:01) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:01) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:01) 
-- CODE:
a=float(input("digite o numero: "))
if(a<=-1 or a>=1):
	print(x**(1/a))
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(0)
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:31) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:32) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:32) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:33) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:34) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:34) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/n))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:48) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(a%)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(a%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:49) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(a%)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(a%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:49) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(a%)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(a%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:57) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(0)
elif(-1<a<0 or 0<a<1):
	print(%a)
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(%a)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:22) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:23) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:24) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:26) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:26) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:27) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(x**(1/a))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:03) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(round(x**(1/a,2))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:03) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(round(x**(1/a,2))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:04) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(round(x**(1/a,2))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:04) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(round(x**(1/a,2))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:04) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2))
elif(-1<a<0 or 0<a<1):
	print(round(%a,2))
else:
	print(round(x**(1/a,2))
-- ERROR:
File "XXXX", line 5
    print(round(%a,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:41) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:42) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:42) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:42) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:43) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:43) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):

			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:10) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:11) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:11) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:11) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:11) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:14) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:15) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:16) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:16) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:16) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:16) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:17) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:17) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
			
-- ERROR:
File "XXXX", line 5
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:47) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	pritnt(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:48) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	pritnt(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:48) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	pritnt(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:48) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	pritnt(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:56) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:56) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:57) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:58) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:59) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:00) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:00) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:01) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:01) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:02) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:02) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:03) 
-- CODE:
a=float(input("digite o numero: "))
if(a==0):
	print(round(0,2)
else:
	print(round(2,2))
			
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:20) 
-- CODE:
a=float(input("digite o numero: "))

-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:21) 
-- CODE:
a=float(input("digite o numero: "))

-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:13) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(x**(1/n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x<=-1 or x>=1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:28) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(round(x**(1/n))
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:35) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(round(x**(1/n,2))
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:36) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(round(x**(1/n,2))
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:42) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(round(x**(1/n,2)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x<=-1 or x>=1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:08) 
-- CODE:
n=float(input("digite o numero: "))
if(x<=-1 or x>=1):
	print(round(x**(1/n,2)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x<=-1 or x>=1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:23) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(x**(1/n,2)))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x**(1/n,2)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:51) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(x**(1/n),2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x**(1/n),2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:07) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:47:55) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(%n))


	
-- ERROR:
File "XXXX", line 5
    print(round(%n))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:04) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(%n,2))


	
-- ERROR:
File "XXXX", line 5
    print(round(%n,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:15) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(n%,2))


	
-- ERROR:
File "XXXX", line 5
    print(round(n%,2))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:02) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:33) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:49:37) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- EXECUTION TIME:
0.206898
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3038/main.py", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:02) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(abs(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
File "XXXX", line 4
    elif(n<x<0 or 0<x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:03) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(abs(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
File "XXXX", line 4
    elif(n<x<0 or 0<x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:23) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(abs((n**(1/n)),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
File "XXXX", line 4
    elif(n<x<0 or 0<x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:24) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(abs((n**(1/n)),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- EXECUTION TIME:
0.163535
-- ERROR:
  File "/home/codebench/codes/1721/3038/main.py", line 4
    elif(n<x<0 or 0<x<1):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:33) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(abs(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
File "XXXX", line 4
    elif(n<x<0 or 0<x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:41) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:47) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(n<x<0 or 0<x<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:32) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(-1<n<0 or 0<n<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:55) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(-1<n<0 or 0<n<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:24) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(-1<n<0 or 0<n<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:36) 
-- CODE:
n=float(input("digite o numero: "))
if(n<=-1 or n>=1):
	print(round(n**(1/n),2))
elif(-1<n<0 or 0<n<1):
	print(round(abs(n),2))
else:
	print(round(0,2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(n**(1/n),2))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
